# eink-billboard

./: .gitignore  prepare-test-data.ps1  pyproject.toml  readme.md
.github/workflows/: codeql.yml  unittest.yaml
app/: package-lock.json  package.json
app/src/: App.vue  main.ts
app/src/components/: AlCalendar.vue  BasicForm.vue  BasicFormField.vue  FormDefs.ts  LeafletPicker.vue  ScheduleDefs.ts  SettingsForm.vue  ThemeSelector.vue  ThemeTools.ts  TimedTrigger.vue
app/src/router/: index.js  index.ts
python/: eink-billboard.py
python/blueprints/: api.py
python/config/: logging.yaml
python/datasources/: data_source.py
python/display/: display_base.py  mock_display.py  tkinter_window.py
python/model/: color_theme.py  configuration_manager.py  configuration_manager_eviction_sink.py  configuration_watcher.py  hash_manager.py  hash_manager_eviction_sink.py  schedule.py  schedule_loader.py  schedule_manager.py  service_container.py  time_of_day.py
python/plugins/: plugin_base.py
python/task/: active_plugin.py  application.py  async_http_worker_pool.py  async_worker_pool.py  basic_task.py  configure_event.py  display.py  display_messages.py  future_source.py  message_router.py  messages.py  playlist_layer.py  protocols.py  scheduler.py  telemetry_sink.py  timer.py  timer_layer.py  timer_tick.py
python/tests/: __init__.py  test_application.py  test_async_worker_pool.py  test_basic_task.py  test_color_theme.py  test_configuration_manager.py  test_configuration_watcher.py  test_data_source.py  test_dispatcher_task.py  test_future_source.py  test_headless_render.py  test_image_compositor.py  test_layers.py  test_plugin.py  test_scaled_time_service.py  test_schedule.py  test_schedule_loader.py  test_schedule_manager.py  test_service_container.py  test_timer.py  test_timer_tick.py  utils.py
python/utils/: file_utils.py  image_compositor.py  image_utils.py
tests/: test_async_worker_pool.py
(+37 files in other folders)
