[project]
name = "eink-billboard"
version = "0.1.0"
description = "e-Ink Billboard"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser==6.0.11",
    "flask==3.1.1",
    "httpx>=0.28.1",
    "icalendar==6.3.1",
    "numpy==2.2.1",
    "openai==1.58.1",
    "pathvalidate==3.3.1",
    "pillow==11.0.0",
    "psutil==7.0.0",
    "python-dotenv==1.0.1",
    "pyyaml>=6.0.3",
    "recurring-ical-events==3.7.0",
    "requests==2.32.4",
    "tzdata>=2025.2",
    "urllib3==2.5.0",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "flask-cors==6.0.1",
]
device = [
    "cysystemd==2.0.1 ; sys_platform == 'linux'",
    "inky==2.2.1 ; sys_platform == 'linux'",
]

[tool.coverage.run]
omit = [
    "*.html",
    "*.css",
    "*/tests/*",
]

[tool.coverage.report]
omit = [
    "*.html",
    "*.css",
    "*/tests/*",
]
